# OnePieceChatBot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Instruction.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/eval/: golden.jsonl
docs/: TODO.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  D3ForceGraph.tsx  (+10 more)
scripts/: 01_scrape.py  02_process.py  03_chunk_and_embed.py  04_build_graph.py  05_test_rag.py  06_eval.py  07_eval_ragas.py  eval_common.py  upload_qdrant_from_jsonl.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  limiter.py  main.py  models.py
src/config/: __init__.py  settings.py
src/processing/: __init__.py  chunker.py  embedder.py  graph_builder.py  vector_store.py
src/rag/: __init__.py  entity_extractor.py  generator.py  graph_ranker.py  graph_retriever.py  noise.py  prompt_builder.py  query_transformer.py  reranker.py  retriever.py  spoiler_filter.py
src/scraper/: __init__.py  categorizer.py  cleaner.py  exporter.py  fandom_spider.py  sbs_scraper.py
src/utils/: circuit_breaker.py  logger.py
tests/: conftest.py  test_categorizer.py  test_chunker.py  test_conversation.py  test_embedder.py  test_entity_extractor.py  test_eval.py  test_generator.py  test_graph_ranker.py  test_graph_retriever.py  test_prompt_builder.py  test_query_transformer.py  test_rag_pipeline.py  test_reranker.py  test_retriever.py  test_scraper.py  test_spoiler_filter.py  test_streaming.py
(+12 files in other folders)
