[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onepiece-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "sentence-transformers>=3.0",
    "torch>=2.1",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "tiktoken>=0.7",
    "qdrant-client>=1.9",
    "neo4j>=5.20",
    "groq>=0.9",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
